5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4468/executions/1573_1330.log
== TEST (2019-03-28 19:25:19) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:27:51) 
-- CODE:
print(250/6.round(41.666666666666664,2))
-- ERROR:
File "XXXX", line 1
    print(250/6.round(41.666666666666664,2))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:29:13) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:29:54) 
-- CODE:
print(250/6) round(41.666666666666664,2)
-- ERROR:
File "XXXX", line 1
    print(250/6) round(41.666666666666664,2)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:30:03) 
-- CODE:
print(250/6) round(41.666666666666664.2)
-- ERROR:
File "XXXX", line 1
    print(250/6) round(41.666666666666664.2)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:30:11) 
-- CODE:
print(250/6)round(41.666666666666664.2)
-- ERROR:
File "XXXX", line 1
    print(250/6)round(41.666666666666664.2)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:30:38) 
-- CODE:
print(250/6) round(41.66,2)
-- ERROR:
File "XXXX", line 1
    print(250/6) round(41.66,2)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:31:53) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:32:30) 
-- CODE:
print(250/6)
round(41.666666666666664,2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:32:37) 
-- CODE:
print(250/6)
round(41.666666666666664,2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:32:45) 
-- CODE:
print(250/6)
round(41.666666666666664,2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:34:02) 
-- CODE:
print(250/6)
round(41.666666666666664)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:34:13) 
-- CODE:
print(250/6)
round(41,666666666666664)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:34:36) 
-- CODE:
print(250/6) round(41,666666666666664)
-- ERROR:
File "XXXX", line 1
    print(250/6) round(41,666666666666664)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:34:41) 
-- CODE:
print(250/6)round(41,666666666666664)
-- ERROR:
File "XXXX", line 1
    print(250/6)round(41,666666666666664)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:34:46) 
-- CODE:
print(250/6).round(41,666666666666664)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(250/6).round(41,666666666666664)
AttributeError: 'NoneType' object has no attribute 'round'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:36:14) 
-- CODE:
print(round(41.666666666666664,2))

-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 19:36:22) 
-- CODE:
print(round(41.666666666666664,2))

-- EXECUTION TIME:
0.145187
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
